--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+<!-- Optional: Add this permission if you want to use bluetooth telephony device like headset/earbuds -->
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+<!-- Optional: Add this permission if you want to save your recordings in public folders -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
     <application
         android:label="widget_of_the_weak"
         android:name="${applicationName}"
